Finish implementing my version of prototype; next up is to add more input!

--- a/todo/client/partials/todo.html
+++ b/todo/client/partials/todo.html
@@ -1,6 +1,7 @@
 <div class="container" ng-controller="TodoController">
     <div class="row col-md-12">
         <div>
+			<!-- ADD MORE INPUT HERE! -->
             <input type="text" class="form-control input-lg" placeholder="Enter a Todo" ng-keypress="save($event)" ng-model="todoInput">
         </div>
     </div>
