Making edits specific to input, error checking in controller

--- a/todo/client/partials/todo.html
+++ b/todo/client/partials/todo.html
@@ -27,7 +27,7 @@
 			<!-- Todo item -->
             <div class="col-md-8 col-sm-8 col-xs-8">
                 <span ng-show="!isEditable[$index]">{{todo.todo}}</span>
-                <input ng-show="isEditable[$index]" type="text" value="{{todo.todo}}" ng-keypress="edit($event,$index);">
+                <input ng-show="isEditable[$index]" type="text" value="{{todo.todo}}" ng-keypress="editTodo($event,$index);">
                 <input ng-show="isEditable[$index]" type="button" class="btn btn-warning" value="Cancel" ng-click="isEditable[$index] = false" />
             </div>
 
