--- a/todo/client/partials/todo.html
+++ b/todo/client/partials/todo.html
@@ -1,11 +1,22 @@
 <div class="container" ng-controller="TodoController">
     <div class="row col-md-12">
         <div>
-			<!-- ADD MORE INPUT HERE! -->
+			<!-- User -->
 			<input type="text" class="form-control input-lg" placeholder="Enter your name" ng-model="userInput">
+
+			<!-- User type -->
+			<span>You are a</span>
+			<input type="radio" ng-model="userType" value="human">Human</label>
+			<input type="radio" ng-model="userType" value="robot">Robot</label><br />
+
+			<!-- Todo priority -->
+
+			<!-- Todo item -->
             <input type="text" class="form-control input-lg" placeholder="Enter a Todo" ng-keypress="save($event)" ng-model="todoInput">
         </div>
     </div>
+
+	<!-- CURRENT TODOS -->
     <div class="row col-md-12 todos">
         <div class="alert alert-info text-center" ng-hide="todos.length > 0">
             <h3>No Todos yet!</h3>
@@ -23,6 +34,8 @@
                 <input ng-show="isEditable[$index]" type="text" value="{{todo.user}}" ng-keypress="editUser($event,$index);">
                 <input ng-show="isEditable[$index]" type="button" class="btn btn-warning" value="Cancel" ng-click="isEditable[$index] = false" />
             </div>
+
+			<!-- User type -->
 
 			<!-- Todo item -->
             <div class="col-md-8 col-sm-8 col-xs-8">
