--- a/todo/client/partials/todo.html
+++ b/todo/client/partials/todo.html
@@ -48,28 +48,34 @@
 			<!-- Todo item -->
             <div class="col-md-8 col-sm-8 col-xs-8">
                 <span ng-show="!isEditable[$index]">{{todo.todo}}</span>
-                <input ng-show="isEditable[$index]" type="text" value="{{todo.todo}}" ng-keypress="editTodo($event,$index);">
-                <input ng-show="isEditable[$index]" type="button" class="btn btn-warning" value="Cancel" ng-click="isEditable[$index] = false" />
+                <input ng-show="isEditable[$index]" type="text" value="{{todo.todo}}">
             </div>
 
 			<!-- Todo priority -->
             <div class="col-md-8 col-sm-8 col-xs-8">
-                <span ng-show="!isEditable[$index]">{{todo.priority}}</span>
+                <span ng-show="!isEditable[$index]">Priority: {{todo.priority}}</span>
+				<input ng-show="isEditable[$index]" type="radio" name="priorityRadios" id="radiohigh" value="High" ng-model="todo.priority">High
+				<input ng-show="isEditable[$index]" type="radio" name="priorityRadios" id="radiolow" value="Low" ng-model="todo.priority">Low
             </div>
 
 			<!-- User -->
             <div class="col-md-8 col-sm-8 col-xs-8">
-                <span ng-show="!isEditable[$index]">{{todo.user}}</span>
-                <input ng-show="isEditable[$index]" type="text" value="{{todo.user}}" ng-keypress="editUser($event,$index);">
-                <input ng-show="isEditable[$index]" type="button" class="btn btn-warning" value="Cancel" ng-click="isEditable[$index] = false" />
+                <span ng-show="!isEditable[$index]">User: {{todo.user}}</span>
+                <input ng-show="isEditable[$index]" type="text" value="{{todo.user}}">
             </div>
 
 			<!-- User type -->
             <div class="col-md-8 col-sm-8 col-xs-8">
-                <span ng-show="!isEditable[$index]">{{todo.userType}}</span>
+                <span ng-show="!isEditable[$index]">User type: {{todo.userType}}</span>
+				<input ng-show="isEditable[$index]" type="radio" name="typeRadios" id="radiohuman" value="Human" ng-model="todo.userType">Human
+				<input ng-show="isEditable[$index]" type="radio" name="typeRadios" id="radiorobot" value="Robot" ng-model="todo.userType">Robot
             </div>
 
 			<!-- Edit/Delete -->
+            <div class="col-md-3 col-sm-3 col-xs-3">
+				<input ng-show="isEditable[$index]" type="button" class="btn btn-info" value="Save" ng-click="edit($event, $index)" />
+				<input ng-show="isEditable[$index]" type="button" class="btn btn-warning" value="Cancel" ng-click="isEditable[$index] = false" />
+			</div>
             <div class="col-md-3 col-sm-3 col-xs-3">
                 <input type="button" class="btn btn-info" ng-disabled="todo.isCompleted" class="pull-right" value="Edit" ng-click="isEditable[$index] = true" />
                 <input type="button" class="btn btn-danger" class="pull-right" value="Delete" ng-click="delete($index)" />
