--- a/todo/client/partials/todo.html
+++ b/todo/client/partials/todo.html
@@ -56,8 +56,8 @@
                 <span ng-show="!isEditable[$index]">Priority: {{todo.priority}}</span>
 			</div>
 			<div ng-show="isEditable[$index]">
-				<input ng-show="isEditable[$index]" type="radio" name="priorityRadios{{$index}}" id="radiohigh" ng-value="High" ng-model="todo.priority" ng-checked="(todo.priority == High)"/>High
-				<input ng-show="isEditable[$index]" type="radio" name="priorityRadios{{$index}}" id="radiolow" ng-value="Low" ng-model="todo.priority" ng-checked="(todo.priority == Low)"/>Low
+				<input ng-show="isEditable[$index]" type="radio" name="priorityRadios{{$index}}" id="radiohigh" value="High" ng-model="todo.priority" ng-checked="(todo.priority == High)"/>High
+				<input ng-show="isEditable[$index]" type="radio" name="priorityRadios{{$index}}" id="radiolow" value="Low" ng-model="todo.priority" ng-checked="(todo.priority == Low)"/>Low
             </div>
 
 			<!-- User -->
@@ -71,8 +71,8 @@
                 <span ng-show="!isEditable[$index]">User type: {{todo.userType}}</span>
 			</div>
 			<div ng-show="isEditable[$index]">
-				<input ng-show="isEditable[$index]" type="radio" name="typeRadios" id="radiohuman" value="Human" ng-model="todo.userType" />Human
-				<input ng-show="isEditable[$index]" type="radio" name="typeRadios" id="radiorobot" value="Robot" ng-model="todo.userType" />Robot
+				<input ng-show="isEditable[$index]" type="radio" name="typeRadios{{$index}}" id="radiohuman" value="Human" ng-model="todo.userType" ng-checked="(todo.userType == Human)" />Human
+				<input ng-show="isEditable[$index]" type="radio" name="typeRadios{{$index}}" id="radiorobot" value="Robot" ng-model="todo.userType" ng-checked="(todo.userType == Robot)" />Robot
             </div>
 
 			<!-- Edit/Delete -->
