Removed delete and edit buttons when in edit mode

--- a/todo/client/partials/todo.html
+++ b/todo/client/partials/todo.html
@@ -81,8 +81,8 @@
 				<input ng-show="isEditable[$index]" type="button" class="btn btn-warning" value="Cancel" ng-click="isEditable[$index] = false" />
 			</div>
             <div class="col-md-3 col-sm-3 col-xs-3">
-                <input type="button" class="btn btn-info" ng-disabled="todo.isCompleted" class="pull-right" value="Edit" ng-click="isEditable[$index] = true" />
-                <input type="button" class="btn btn-danger" class="pull-right" value="Delete" ng-click="delete($index)" />
+                <input ng-show="!isEditable[$index]" type="button" class="btn btn-info" ng-disabled="todo.isCompleted" class="pull-right" value="Edit" ng-click="isEditable[$index] = true" />
+                <input ng-show="!isEditable[$index]" type="button" class="btn btn-danger" class="pull-right" value="Delete" ng-click="delete($index)" />
             </div>
 
         </div>
