Whole page works!!!

--- a/todo/client/partials/todo.html
+++ b/todo/client/partials/todo.html
@@ -7,7 +7,7 @@
 			</div>
 
 			<!-- Todo Deadline -->
-			<label>Priority level: {{ $scope.priority }} </label>
+			<label>Priority level: {{ priority }} </label>
 			<input type="range" name="range" ng-model="priority" min="1" max="5" required />
 
 			<!-- Completed -->
