--- a/androidAppPractice/DemoAPIApp/app/src/main/res/layout/activity_main.xml
+++ b/androidAppPractice/DemoAPIApp/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.demoapiapp.MainActivity">
 
     <!-- EditText: where person's email address is input -->
     <EditText
