Post works, now need to get user data

--- a/androidAppPractice/weatherApp/app/src/main/res/layout/activity_main.xml
+++ b/androidAppPractice/weatherApp/app/src/main/res/layout/activity_main.xml
@@ -39,16 +39,15 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/cityText"/>
     <TextView
-        android:id="@+id/condDescr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/condIcon"
-        android:layout_alignLeft="@id/condIcon" />
-    <TextView
         android:id="@+id/temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
-        android:layout_alignBaseline="@id/condDescr"
-        android:layout_toRightOf="@id/condDescr"/>
+        android:layout_below="@id/condIcon"/>
+    <TextView
+        android:id="@+id/condDescr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_below="@id/temp" />
 </RelativeLayout>
