--- a/androidAppPractice/weatherMapApp/app/src/main/res/layout/activity_main.xml
+++ b/androidAppPractice/weatherMapApp/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
     <!-- EditText:
     * id: provides unique identifer for view which we can use to reference from app code;
         "@" required when you're referring to any resource object from XML,
@@ -22,9 +26,8 @@
         string resource defined in separate resource (strings.xml)
     *** FOR TEXT IN UI, ALWAYS SPECIFY A STRING AS A RESOURCE! ***-->
     <EditText android:id="@+id/edit_message"
-        android:layout_weight="1"
-        android:layout_height="0dp"
-        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
         android:hint="@string/edit_message" />
     <!-- Button:
     * Doesn't need android:id attribute because NOT referenced from activity code
