--- a/androidAppPractice/weatherMapApp/app/src/main/res/layout/activity_main.xml
+++ b/androidAppPractice/weatherMapApp/app/src/main/res/layout/activity_main.xml
@@ -43,5 +43,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/location_send"
-        android:onClick="getWeatherByCity"/>
+        android:onClick="getWeatherByGPS"/>
 </LinearLayout>
