--- a/HadoopTutorial/tutorial/css/scrolling-nav.css
+++ b/HadoopTutorial/tutorial/css/scrolling-nav.css
@@ -38,6 +38,13 @@ of those sections to manage the look and feel of the site. */
     background: #fff;
 }
 
+.setup-section {
+    height: 100%;
+    padding-top: 150px;
+    text-align: center;
+    background: #eee;
+}
+
 .about-section {
     height: 100%;
     padding-top: 150px;
@@ -53,6 +60,13 @@ of those sections to manage the look and feel of the site. */
 }
 
 .contact-section {
+    height: 100%;
+    padding-top: 150px;
+    text-align: center;
+    background: #eee;
+}
+
+.resources-section {
     height: 100%;
     padding-top: 150px;
     text-align: center;
