--- a/HadoopTutorial/tutorial/css/scrolling-nav.css
+++ b/HadoopTutorial/tutorial/css/scrolling-nav.css
@@ -35,8 +35,9 @@ of those sections to manage the look and feel of the site. */
     height: 100%;
     padding-top: 150px;
     text-align: center;
-    background: #fff;
+    background: #fff
 }
+
 
 .intro-section2 {
     height: 100%;
@@ -91,9 +92,9 @@ of those sections to manage the look and feel of the site. */
 
 .job-section {
     height: 100%;
-    padding-top: 150px;
+    padding-top: 100px;
     text-align: center;
-    background: #eee;
+    background: #fff;
 }
 
 .resources-section {
