--- a/HadoopTutorial/tutorial/css/scrolling-nav.css
+++ b/HadoopTutorial/tutorial/css/scrolling-nav.css
@@ -27,10 +27,6 @@ html {
     }
 }
 
-/* Demo Sections - You can use these as guides or delete them - the scroller will work with any sort of height, fixed, undefined, or percentage based.
-The padding is very important to make sure the scrollspy picks up the right area when scrolled to. Adjust the margin and padding of sections and children 
-of those sections to manage the look and feel of the site. */
-
 .intro-section {
     height: 100%;
     padding-top: 150px;
@@ -61,6 +57,9 @@ of those sections to manage the look and feel of the site. */
 }
 
 .setup-list {
+    display:-moz-inline-stack;
+    display:inline-block;
+    *display:inline;
     margin-left: 0;
     padding-right: 0;
     list-style-type: none;
@@ -92,7 +91,14 @@ of those sections to manage the look and feel of the site. */
 
 .job-section {
     height: 100%;
-    padding-top: 100px;
+    padding-top: 75px;
+    text-align: center;
+    background: #fff;
+}
+
+.job-section2 {
+    height: 100%;
+    padding-top: 150px;
     text-align: center;
     background: #fff;
 }
@@ -102,4 +108,30 @@ of those sections to manage the look and feel of the site. */
     padding-top: 150px;
     text-align: center;
     background: #eee;
+}
+
+.resources-list {
+    display:-moz-inline-stack;
+    display:inline-block;
+    *display:inline;
+    margin-top: 20px;
+    padding-right: 0;
+    list-style-type: none;
+    text-align: left;
+}
+
+.resources-list li {
+    counter-increment: step-counter;
+    margin-top: 20px;
+}
+
+.resources-list li::before {
+    content: counter(step-counter);
+    margin-right: 5px;
+    font-size: 80%;
+    background-color: rgb(200,200,200);
+    color: white;
+    font-weight: bold;
+    padding: 3px 8px;
+    border-radius: 3px;
 }
