Cleaned login page

--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -9,10 +9,12 @@
     <style type="text/css">
         body {
             padding-top: 100px;
+			padding-left: 10px;
+			padding-right: 10px;
         }
  
         .form-container {
-            width: 400px;
+            width: 300px;
             margin: auto;
         }
     </style>
